addresses mantis bug "0000348: generated file name in code listings". @src and @href on listings are now treated differently than before: * @src is always present in a div/a outside the pre (in order to keep standard conformity), which is displayed in a CSS-based advanced manner (using :hover and relative positioning) as a "tab". * If @href is present and non-empty, the whole listing gets wrapped into an hyperlink which links to @href. As long as the html:a is inside the html:pre and as long as the listings content is text-only, this is fine wrt the standard. * Regarding @title, it gets a bit tricky:   * If no @href is present, the @title (if present) is used for the source link.   * If @href and @title are present, the @title goes only into the @href-bearing html:a element. The source link then bears either a configuration-defined default title or and auto-generated title of the form "file name + line numbers". * For this purpose, a new configuration attribute configuration/listings/default-title has been introduced.
Please be aware, that only the zurich and the iSchool layout currently support this change. If this change is deemed as fulfilling the requirements of mantis bug 348, I will apply analogous adaptations to the remaining layouts.

--- a/hotspot/layout/iSchool/iSchool.css
+++ b/hotspot/layout/iSchool/iSchool.css
@@ -168,8 +168,14 @@ pre {
 	white-space : pre-wrap ; white-space : -moz-pre-wrap ; white-space : -pre-wrap ; white-space : -o-pre-wrap ; word-wrap : break-word ;
 }
 
+pre a:link, pre a:visited, pre a:hover {
+	text-decoration: none;
+	border-bottom-width: 0;
+	color: inherit;
+	background-color: inherit;
+}
 
-.listing-sourceref {
+/* .listing-sourceref {
 	text-align: right;
 	position: relative;
 	margin-top: -1.6em;
@@ -190,6 +196,32 @@ pre {
 pre:hover .listing-sourceref, .listing-sourceref:hover {
 	visibility: visible;
 }
+*/
+
+.ref-container {
+	text-align: right;
+	position: relative;
+	margin: -2em 1.3em 0 1.3em;
+	visibility: hidden;
+	display: block;
+	padding-right: 1ex;
+	line-height: 120%;
+}
+
+/* pre:hover + .listing-sourceref, .listing-sourceref:hover { */
+pre:hover + .ref-container, .ref-container:hover {
+	visibility: visible;
+}
+
+a.ref-link {
+	font-size: 60%;
+	text-decoration: underline;
+	background-color: #fff;
+	border: #95ABD0 solid 1px;
+	border-bottom: solid 3px #fff;
+	padding: 0.34em 1ex;
+}
+
 
 /* OUTLINE SLIDES */
 
